changed scripts to refer to backend

--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "start": "nx serve",
-    "build": "nx build",
+    "start": "nx serve backend",
+    "build": "nx build backend",
     "test": "nx test"
   },
   "private": true,
